# kubeoven

./: .gitignore  README.md  pyproject.toml
docs/kubernetes/: admin.conf  controller-manager.conf  kubeadm-flags.env  kubelet.conf  kubelet.service.ini  kubelet.yaml  scheduler.conf
examples/openstack/: parameters.yaml.dist  requirements.txt
kubeoven/: __main__.py  constants.py  exceptions.py
kubeoven/binary/: __init__.py  binaries.py  binary.py  download_binary.py
kubeoven/commands/: __init__.py  clean_command.py  deploy_command.py
kubeoven/common/: __init__.py  di.py
kubeoven/conf/: __init__.py  bastion_conf.py  cluster_conf.py  containerd_versions.py  create_kubeconfig.py  network_conf.py  node_conf.py  read_cluster_conf.py
kubeoven/deploy/: __init__.py  deploy_addons.py  deploy_cache.py  deploy_cluster.py  deploy_controlplane.py  deploy_etcd_cluster.py  deploy_manifests.py  deploy_registry.py  deploy_wokerplane.py
kubeoven/health/: __init__.py  health_check_apiserver.py  health_check_ctrl_manager.py  health_check_kubelet.py  health_check_nginx_proxy.py  health_check_node.py  health_check_request.py  health_check_scheduler.py
kubeoven/log/: __init__.py
kubeoven/pki/: __init__.py  create_ca.py  create_cert.py  encoding.py  key_pair.py  key_usage.py
kubeoven/preflight/: __init__.py  check_container_runtime.py  check_controlplane_node.py  check_etcd_node.py  check_kernel_mods.py  check_networking.py  check_nodes.py  check_required_cmds.py  check_worker_node.py
kubeoven/ssh/: __init__.py  create_bastion_client.py  create_node_client.py  forward.py  (+2 more)
(+131 files in other folders)
