[tool.poetry]
name = "kubeoven"
version = "0.1.0"
description = "Deploy kubernetes anywhere"
readme = "README.md"
authors = ["nauman <nauman1225@gmail.com>"]
repository = "https://github.com/kubeoven/kubeoven"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pydantic = "^1.9.1"
paramiko = "^2.9.2"
PyYAML = "^6.0"
click = "^8.0.3"
sshtunnel = "^0.4.0"
toml = "^0.10.2"
cryptography = "^36.0.1"
Jinja2 = "^3.0.3"
requests = "^2.27.1"
backoff = "^1.11.1"
colored = "^1.4.3"
StrEnum = "^0.4.7"
semver = "^2.13.0"
jq = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
types-paramiko = "^2.8.12"
types-requests = "^2.27.9"
types-PyYAML = "^6.0.4"
types-toml = "^0.10.4"
Nuitka = "^0.7.7"
build = "^0.8.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
